Archive2/ea/83282ca3c773b0/output
main.cpp:38:2: error: expected unqualified-id before numeric constant
 }3/8*1/2=3/16
  ^
